--- a/index.qmd
+++ b/index.qmd
@@ -95,7 +95,8 @@ library(bkcde)
 library(knitr)
 library(kableExtra)
 options(plot.par.mfrow=FALSE)
-require(sem)
+library(sem)
+library(pglm)
 library(crs)
 library(MASS)
 ```
@@ -543,6 +544,56 @@ foo <- plot(f,ci=TRUE,ci.method="all",ci.preplot=FALSE,plot.behavior="plot-data"
 persp(unique(f$x.eval),unique(f$y.eval),
       matrix(dbeta(f$y.eval,1+f$x.eval,2-f$x.eval),nrow=length(unique(f$x.eval))),
       theta=120,phi=45,ticktype="detailed",xlab="x",ylab="y",zlab="f(y|x)",zlim=foo$zlim,main="True density")
+```
+:::
+
+## Example - Patent Application Data
+
+::: {.callout-note appearance="simple"}
+## Example (Annual numbers of European patent applications)
+
+```{r}
+#| echo: true
+#| cache: true
+#| output-location: slide
+#| out-width: "100%"
+#| label: fig-conditional-kde-beta-ci-2
+#| fig-cap: Conditional KDE for patent data with simultaneous confidence intervals, 2D plot for year 1987, 3D plot for all years
+library(bkcde)
+library(np)
+library(pglm)
+## Annual observations of 181 firms from 1983 to 1991, number of European patent
+## applications (count), 1629 observations. 
+data(PatentsRD)
+attach(PatentsRD)
+## Patent data often has a preponderance of zeros and "overdispersion". Since
+## the data has a boundary at zero, a zero-inflated negative binomial model is
+## often used. Instead we consider a kernel density estimation approach that
+## adapts to the boundary automatically and also chooses the polynomial order in
+## a data-driven fashion.
+x <- as.integer(as.character(year))
+y <- patent
+f.bkcde <- bkcde(x=x,y=y,proper=TRUE)
+## Estimator of Hall, Racine & Li (polynomial order 0 conditional density estimate)
+## with bandwidth selection via likelihood cross-validation
+f.hrl <- npcdens(txdat=x,exdat=rep(1987,100),tydat=y,eydat=seq(min(y),100,length=100))
+## In the following plots note that the data has a very long tail (right skewed)
+## so we hone in on firms having 100 or fewer patents/year. We first take
+## univariate histogram and density() estimators for the year 1987, then overlay
+## the conditional kernel density estimates from npcdens() and bkcde() for the
+## same year (these use data for all years). We also plot the bkcde() 2D
+## estimates for the year 1987 without, then with simultaneous confidence
+## intervals. Finally, we plot the bkcde() estimate in 3D with and without
+## confidence intervals (all years)
+par(mfrow=c(2,2),cex=.75,mar=c(4,4,4,2))
+hist(y[x==1987],xlab="patent",main="",ylim=c(0,0.06),xlim=c(0,100),prob=TRUE,breaks=500)
+lines(density(y[x==1987],from=0,to=100),lty=1,col=1)
+lines(seq(min(y),100,length=100),fitted(f.hrl),col=2,lty=2,lwd=2)
+lines(seq(min(y),100,length=100),predict(f.bkcde,newdata=data.frame(x=rep(1987,100),y=seq(min(y),100,length=100))),col=3,lty=3,lwd=3)
+legend("topright",legend=c("density() classical kernel","HRL classical kernel","BKPA boundary kernel"),col=1:3,lty=1:3,lwd=c(1,2,3),bty="n")
+plot(f.bkcde,persp=FALSE,x.eval=1987,y.eval=seq(min(y),100,length=100),xlim=c(0,100))
+plot(f.bkcde,persp=FALSE,x.eval=1987,y.eval=seq(min(y),100,length=100),xlim=c(0,100),ci=TRUE,ci.method="Simultaneous",ci.preplot=FALSE,B=1000)
+plot(f.bkcde,x.eval=seq(min(x),max(x),length=25),y.eval=seq(min(y),100,length=25),proper=FALSE,ci=TRUE,ci.method="Simultaneous",ci.preplot=FALSE,B=1000)
 ```
 :::
 
