--- a/index.qmd
+++ b/index.qmd
@@ -25,7 +25,6 @@ knitr:
     warning: false
     R.options:
       np.messages: false
-      crs.messages: false
       plot.par.mfrow: false
 ## revealjs options galore
 format:
@@ -95,10 +94,7 @@ library(bkcde)
 library(knitr)
 library(kableExtra)
 options(plot.par.mfrow=FALSE)
-library(sem)
 library(pglm)
-library(crs)
-library(MASS)
 ```
 
 ## Overview of Talk
@@ -559,7 +555,6 @@ persp(unique(f$x.eval),unique(f$y.eval),
 #| label: fig-conditional-patent
 #| fig-cap: Conditional KDE for patent data with simultaneous confidence intervals, 2D plot for year 1987, 3D plot for all years
 library(bkcde)
-library(np)
 library(pglm)
 ## Annual observations of 181 firms from 1983 to 1991, number of European patent
 ## applications (count), 1629 observations. 
@@ -572,10 +567,20 @@ attach(PatentsRD)
 ## a data-driven fashion.
 x <- as.integer(as.character(year))
 y <- patent
-f.bkcde <- bkcde(x=x,y=y,proper=TRUE)
+## To most quickly run this example, we take results from a prior run os that in
+## real-time computation proceeds as quickly as possible for illustrative
+## purposes (you can comment out/renable to confirm they produce identical
+## results)
+# f.bkcde <- bkcde(x=x,y=y,proper=TRUE)
+# f.bkcde$h [1] 5.022254 5.233370
+# f.bkcde$degree [1] 0
+f.bkcde <- bkcde(h=c(5.022254,5.233370),degree=0,x=x,y=y,proper=TRUE)
 ## Estimator of Hall, Racine & Li (polynomial order 0 conditional density estimate)
 ## with bandwidth selection via likelihood cross-validation
-f.hrl <- npcdens(txdat=x,exdat=rep(1987,100),tydat=y,eydat=seq(min(y),100,length=100))
+# f.hrl <- bkcde(degree.max=0,x=x,y=y,proper=TRUE,y.ub=Inf,y.lb=-Inf,x.ub=Inf,x.lb=-Inf)
+# f.hrl$h [1] 4.166873 5.442247
+# f.hrl$degree [1] 0
+f.hrl <- bkcde(h=c(4.166873,5.442247),degree=0,x=x,y=y,proper=TRUE,y.ub=Inf,y.lb=-Inf,x.ub=Inf,x.lb=-Inf)
 ## In the following plots note that the data has a very long tail (right skewed)
 ## so we hone in on firms having 100 or fewer patents/year. We first take
 ## univariate histogram and density() estimators for the year 1987, then overlay
@@ -583,16 +588,23 @@ f.hrl <- npcdens(txdat=x,exdat=rep(1987,100),tydat=y,eydat=seq(min(y),100,length
 ## same year (these use data for all years). We also plot the bkcde() 2D
 ## estimates for the year 1987 without, then with simultaneous confidence
 ## intervals. Finally, we plot the bkcde() estimate in 3D with and without
-## confidence intervals (all years)
+## confidence intervals (all years). We override the default number of bootstrap
+## replications to 399.
+B <- 399
 par(mfrow=c(2,2),cex=.65,mar=c(4,4,4,2))
 hist(y[x==1987],xlab="patent",main="",ylim=c(0,0.06),xlim=c(0,100),prob=TRUE,breaks=500)
 lines(density(y[x==1987],from=0,to=100),lty=1,col=1)
-lines(seq(min(y),100,length=100),fitted(f.hrl),col=2,lty=2,lwd=2)
-lines(seq(min(y),100,length=100),predict(f.bkcde,newdata=data.frame(x=rep(1987,100),y=seq(min(y),100,length=100))),col=3,lty=3,lwd=3)
-legend("topright",legend=c("density() classical kernel","HRL classical kernel","BKPA boundary kernel"),col=1:3,lty=1:3,lwd=c(1,2,3),bty="n")
+lines(seq(min(y),100,length=100),predict(f.hrl,newdata=data.frame(x=rep(1987,100),y=seq(min(y),100,length=100))),
+      col=2,lty=2,lwd=2)
+lines(seq(min(y),100,length=100),predict(f.bkcde,newdata=data.frame(x=rep(1987,100),y=seq(min(y),100,length=100))),
+      col=3,lty=3,lwd=3)
+legend("topright",legend=c("density() classical kernel [1987 only]","HRL classical kernel","BKPA boundary kernel"),
+       col=1:3,lty=1:3,lwd=c(1,2,3),bty="n")
 plot(f.bkcde,persp=FALSE,x.eval=1987,y.eval=seq(min(y),100,length=100),xlim=c(0,100))
-plot(f.bkcde,persp=FALSE,x.eval=1987,y.eval=seq(min(y),100,length=100),xlim=c(0,100),ci=TRUE,ci.method="Simultaneous",ci.preplot=FALSE,B=1000)
-plot(f.bkcde,x.eval=seq(min(x),max(x),length=25),y.eval=seq(min(y),100,length=25),proper=FALSE,ci=TRUE,ci.method="Simultaneous",ci.preplot=FALSE,B=1000)
+plot(f.bkcde,persp=FALSE,x.eval=1987,y.eval=seq(min(y),100,length=100),xlim=c(0,100),
+     ci=TRUE,ci.method="Simultaneous",ci.preplot=FALSE,B=B)
+plot(f.bkcde,x.eval=seq(min(x),max(x),length=25),y.eval=seq(min(y),100,length=25),
+     ci=TRUE,ci.method="Simultaneous",ci.preplot=FALSE,B=B)
 ```
 :::
 
